// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remarkImage > should render as link 1`] = `
"
<p><a href="/public/elements/hints"><figure src="/public/test.jpg" alt="A description" title="A caption" class="normal undefined">
      <img src="/public/test.jpg" alt="A description" onclick="hyperbook.toggleLightbox(this)">
      <figcaption>A caption</figcaption>
    </figure></a></p>
"
`;

exports[`remarkImage > should render image with caption 1`] = `
"
<p>
  <figure src="/public/test.jpg" alt="A description" title="A caption" class="normal undefined">
    <img src="/public/test.jpg" alt="A description" onclick="hyperbook.toggleLightbox(this)">
    <figcaption>A caption</figcaption>
  </figure>
</p>
"
`;

exports[`remarkImage > should render image with description 1`] = `
"
<p>
  <figure src="/public/test.jpg" alt="A description" class="normal undefined">
    <img src="/public/test.jpg" alt="A description" onclick="hyperbook.toggleLightbox(this)">
  </figure>
</p>
"
`;
